--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -9,6 +9,8 @@
 	st = status
 	co = checkout
 	unstage = reset HEAD --
+  pr  = "!f() { git fetch -fu ${2:-upstream} refs/pull/$1/head:pr/$1 && git checkout pr/$1; }; f"
+  pr-clean = "!git for-each-ref refs/heads/pr/* --format='%(refname)' | while read ref ; do branch=${ref#refs/heads/} ; git branch -D $branch ; done"
 
 [rerere]
 	enabled = true
