--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -11,6 +11,7 @@
 	unstage = reset HEAD --
   pr  = "!f() { git fetch -fu ${2:-upstream} refs/pull/$1/head:pr/$1 && git checkout pr/$1; }; f"
   pr-clean = "!git for-each-ref refs/heads/pr/* --format='%(refname)' | while read ref ; do branch=${ref#refs/heads/} ; git branch -D $branch ; done"
+	rebase-pr = "\"!f() { git checkout -b pr/$1 pr/$1; git rebase @{-1}; git checkout @{-2}; git rebase @{-1}; }; f\""
 
 [rerere]
 	enabled = true
@@ -18,3 +19,5 @@
 	default = current
 [pull]
 	default = current
+[release]
+	autoStash = true
